fix: layout was broken on mobile

--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -1,20 +1,32 @@
+@import "variables";
+
 .about-page {
 	.hero-text {
 		position: absolute;
 		top: 20vh;
-		width: 600px;
+		width: 100vw;
 		//background:rgba(100,100,100,0.5);
-		right: calc(50% - 300px);
-		left: calc(50% - 300px);
+		right: 0;
+		left: 0;
 		margin: 0 auto;
-		z-index: 10;
+		z-index: 1;
 		text-align: center;
 		color: #eee;
-		h1 {
-			font-size: 6rem;
+		@include mdlg() {
+			h1 {
+				font-size: 6rem;
+			}
+			p {
+				font-size: 2rem;
+			}
 		}
-		p {
-			font-size: 2rem;
+		@include sm() {
+			h1 {
+				font-size: 3.5rem;
+			}
+			p {
+				font-size: 1.5rem;
+			}
 		}
 	}
 	.carousel-item {
